syntax = "proto3";

package user.v1;

option go_package = "user-service/api/proto/user/v1;userv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// UserService provides user management operations
service UserService {
  // CreateUser creates a new user
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // GetUser retrieves a user by ID
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // GetUserByEmail retrieves a user by email
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserResponse);

  // UpdateUser updates user profile information
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  // DeleteUser soft-deletes a user
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);

  // ListUsers retrieves a paginated list of users
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);

  // ActivateUser activates a pending user
  rpc ActivateUser(ActivateUserRequest) returns (google.protobuf.Empty);

  // SuspendUser suspends an active user
  rpc SuspendUser(SuspendUserRequest) returns (google.protobuf.Empty);

  // ChangePassword changes user password
  rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty);

  // VerifyEmail marks user email as verified
  rpc VerifyEmail(VerifyEmailRequest) returns (google.protobuf.Empty);

  // VerifyPhone marks user phone as verified
  rpc VerifyPhone(VerifyPhoneRequest) returns (google.protobuf.Empty);
}

// AuthService provides authentication operations
service AuthService {
  // Login authenticates a user and returns tokens
  rpc Login(LoginRequest) returns (LoginResponse);

  // RefreshToken refreshes the access token using a refresh token
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);

  // Logout revokes a specific refresh token
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);

  // LogoutAll revokes all refresh tokens for the current user
  rpc LogoutAll(LogoutAllRequest) returns (google.protobuf.Empty);

  // ValidateToken validates an access token
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

// RBACService provides role-based access control operations
service RBACService {
  // CreateRole creates a new role
  rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse);

  // GetRole retrieves a role by ID
  rpc GetRole(GetRoleRequest) returns (GetRoleResponse);

  // UpdateRole updates a role
  rpc UpdateRole(UpdateRoleRequest) returns (UpdateRoleResponse);

  // DeleteRole deletes a role
  rpc DeleteRole(DeleteRoleRequest) returns (google.protobuf.Empty);

  // ListRoles retrieves all roles
  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse);

  // AssignRole assigns a role to a user
  rpc AssignRole(AssignRoleRequest) returns (google.protobuf.Empty);

  // RemoveRole removes a role from a user
  rpc RemoveRole(RemoveRoleRequest) returns (google.protobuf.Empty);

  // CreatePermission creates a new permission
  rpc CreatePermission(CreatePermissionRequest)
      returns (CreatePermissionResponse);

  // DeletePermission deletes a permission
  rpc DeletePermission(DeletePermissionRequest) returns (google.protobuf.Empty);

  // ListPermissions retrieves all permissions
  rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse);

  // AddPermissionToRole adds a permission to a role
  rpc AddPermissionToRole(AddPermissionToRoleRequest)
      returns (google.protobuf.Empty);

  // RemovePermissionFromRole removes a permission from a role
  rpc RemovePermissionFromRole(RemovePermissionFromRoleRequest)
      returns (google.protobuf.Empty);

  // CheckPermission checks if a user has a specific permission
  rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse);
}

// Enums

enum UserType {
  USER_TYPE_UNSPECIFIED = 0;
  USER_TYPE_ADMIN = 1;
  USER_TYPE_CUSTOMER = 2;
  USER_TYPE_PARTNER = 3;
}

enum UserStatus {
  USER_STATUS_UNSPECIFIED = 0;
  USER_STATUS_PENDING = 1;
  USER_STATUS_ACTIVE = 2;
  USER_STATUS_INACTIVE = 3;
  USER_STATUS_SUSPENDED = 4;
}

// Messages

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string full_name = 4;
  string phone = 5;
  UserType user_type = 6;
  UserStatus status = 7;
  bool email_verified = 8;
  bool phone_verified = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  repeated Role roles = 12;
}

message Role {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated Permission permissions = 4;
  google.protobuf.Timestamp created_at = 5;
}

message Permission {
  string id = 1;
  string resource = 2;
  string action = 3;
  string description = 4;
}

// UserService messages

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string username = 3;
  string full_name = 4;
  string phone = 5;
  UserType user_type = 6;
}

message CreateUserResponse { User user = 1; }

message GetUserRequest { string id = 1; }

message GetUserByEmailRequest { string email = 1; }

message GetUserResponse { User user = 1; }

message UpdateUserRequest {
  string id = 1;
  optional string username = 2;
  optional string full_name = 3;
  optional string phone = 4;
}

message UpdateUserResponse { User user = 1; }

message DeleteUserRequest { string id = 1; }

message ListUsersRequest {
  int32 page_size = 1;
  int32 page = 2;
  optional UserType user_type = 3;
  optional UserStatus status = 4;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message ActivateUserRequest { string id = 1; }

message SuspendUserRequest { string id = 1; }

message ChangePasswordRequest {
  string user_id = 1;
  string current_password = 2;
  string new_password = 3;
}

message VerifyEmailRequest { string user_id = 1; }

message VerifyPhoneRequest { string user_id = 1; }

// AuthService messages

message LoginRequest {
  string email = 1;
  string password = 2;
  string ip_address = 3;
  string user_agent = 4;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  User user = 4;
}

message RefreshTokenRequest {
  string refresh_token = 1;
  string ip_address = 2;
  string user_agent = 3;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

message LogoutRequest { string refresh_token = 1; }

message LogoutAllRequest { string user_id = 1; }

message ValidateTokenRequest { string access_token = 1; }

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
  UserType user_type = 4;
  repeated string permissions = 5;
}

// RBACService messages

message CreateRoleRequest {
  string name = 1;
  string description = 2;
}

message CreateRoleResponse { Role role = 1; }

message GetRoleRequest { string id = 1; }

message GetRoleResponse { Role role = 1; }

message UpdateRoleRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
}

message UpdateRoleResponse { Role role = 1; }

message DeleteRoleRequest { string id = 1; }

message ListRolesRequest {}

message ListRolesResponse { repeated Role roles = 1; }

message AssignRoleRequest {
  string user_id = 1;
  string role_id = 2;
}

message RemoveRoleRequest {
  string user_id = 1;
  string role_id = 2;
}

message CreatePermissionRequest {
  string resource = 1;
  string action = 2;
  string description = 3;
}

message CreatePermissionResponse { Permission permission = 1; }

message DeletePermissionRequest { string id = 1; }

message ListPermissionsRequest {}

message ListPermissionsResponse { repeated Permission permissions = 1; }

message AddPermissionToRoleRequest {
  string role_id = 1;
  string permission_id = 2;
}

message RemovePermissionFromRoleRequest {
  string role_id = 1;
  string permission_id = 2;
}

message CheckPermissionRequest {
  string user_id = 1;
  string resource = 2;
  string action = 3;
}

message CheckPermissionResponse { bool has_permission = 1; }
